jackett/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: filme
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          resources:
            limits:
              cpu: "500m"
              memory: "300M"
            requests:
              cpu: "100m"
              memory: "100M"
          image: linuxserver/jackett:latest
          ports:
            - containerPort: 9117
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: jackett-config
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop
