jackett/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: filme
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 9117
      targetPort: 9117
